<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateOptions">


    <EditText
        android:id="@+id/optionField"
        android:layout_width="378dp"
        android:layout_height="55dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/enter_option_1"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTextView" />

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="379dp"
        android:layout_height="96dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner_radius"
        android:padding="5dp"
        android:text="@string/question"
        android:textColor="@color/darkest_blue"
        android:textSize="20sp"
        android:translationZ="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addOptionButton"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/add_option"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionField" />

    <Button
        android:id="@+id/cancelOperation"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addOptionButton" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:text="@string/next"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancelOperation" />
</androidx.constraintlayout.widget.ConstraintLayout>