...
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newBankBackButton" />

    <Button
        android:id="@+id/createBankButton"
        android:layout_width="328dp"
        android:layout_height="68dp"
        android:layout_marginTop="12dp"
        android:text="@string/create_bank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bankNameInputField" />

    <EditText
        android:id="@+id/bankNameInputField"
        android:layout_width="332dp"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
...
