...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeacherBanks">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/banksRecyclerView"
        android:layout_width="383dp"
        android:layout_height="648dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacherBanksBackButton"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
